--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "portal-sub-api",
+  "version": "1.0.0",
+  "description": "Portal SUB - Sistema de Consultas Bemobi",
+  "main": "backend/index.js",
+  "scripts": {
+    "start": "cd backend && node index.js",
+    "dev": "cd frontend && npm run dev",
+    "build": "cd frontend && npm run build"
+  },
+  "author": "Rafael Martins",
+  "license": "MIT",
   "dependencies": {
     "pg": "^8.16.3"
   }
