--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "start": "cd backend && node index.js",
     "dev": "cd frontend && npm run dev",
-    "build": "cd frontend && npm run build"
+    "build": "cd frontend && npm run build",
+    "vercel-build": "cd frontend && npm run build",
+    "install-deps": "npm install && npm --prefix frontend install && npm --prefix backend install"
   },
   "author": "Rafael Martins",
   "license": "MIT",
   "dependencies": {
     "pg": "^8.16.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
